# django-sge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
ai/: admin.py  agent.py  models.py  prompts.py
ai/migrations/: 0001_initial.py
authentication/: signals.py  urls.py
brands/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
categories/: admin.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/templates/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html
config/: metrics.py  settings.py  urls.py  views.py
config/fixtures/: initial_user.json
config/middlewares/: __init__.py  demo_data_cleanup_middleware.py
config/templates/: base.html  home.html
inflows/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
inflows/migrations/: 0001_initial.py
inflows/templates/: inflow_create.html  inflow_detail.html  inflow_list.html
outflows/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
outflows/migrations/: 0001_initial.py
outflows/templates/: outflow_create.html  outflow_detail.html  (+1 more)
products/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
services/: notify.py
suppliers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+20 files in other folders)
